--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,14 @@
     android:orientation="horizontal"
     >
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
+    </FrameLayout>
+
     <ListView
         android:id="@+id/lst_home"
         android:layout_width="match_parent"
