--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,13 +8,13 @@
     android:orientation="horizontal"
     >
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/container_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:name="com.example.phonetreemanager.CallInfoFragment"
         android:visibility="gone"
-        >
-    </FrameLayout>
+        />
 
     <ListView
         android:id="@+id/lst_home"
