--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,11 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.phonetreemanager.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_create_call"
+        android:name="com.example.phonetreemanager.ui.call_info.CallInfoFragment"
+        android:label="@string/title_create_call"
+        tools:layout="@layout/fragment_callinfo"
+        />
 
     <fragment
         android:id="@+id/navigation_notifications"
