--- a/app/src/main/res/layout/fragment_callinfo.xml
+++ b/app/src/main/res/layout/fragment_callinfo.xml
@@ -57,4 +57,10 @@
         android:ellipsize="none"
         android:hint="@string/call_info_hint" />
 
+    <Button
+        android:id="@+id/btn_submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/btn_margin"
+        android:text="@string/submit"/>
 </LinearLayout>
