--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,19 @@
     android:orientation="vertical"
     >
 
+    <TextView
+        android:id="@+id/txt_call_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/call_status_here"
+        android:textSize="40sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="@dimen/text_margin"
+        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/text_margin"
+        android:textAlignment="center"
+        android:visibility="gone"/>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/call_info_fragment"
         android:layout_width="match_parent"
