--- a/app/src/main/res/layout/fragment_tracker.xml
+++ b/app/src/main/res/layout/fragment_tracker.xml
@@ -12,7 +12,6 @@
         android:id="@+id/txt_call_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/call_status_here"
         android:textSize="40sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="@dimen/text_margin"
@@ -21,11 +20,6 @@
         android:textAlignment="center"
         android:visibility="gone"/>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/call_info_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <LinearLayout
         android:id="@+id/layout_call_buttons"
         style="?android:attr/buttonBarStyle"
@@ -33,13 +27,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
-        android:visibility="gone"
-        >
+        android:visibility="gone" >
 
         <Button
             android:id="@+id/btn_park_call"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/btn_width_small"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/btn_margin"
             android:textColor="@color/design_default_color_primary"
@@ -48,7 +41,7 @@
         <Button
             android:id="@+id/btn_transfer_call"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/btn_width_medium"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/btn_margin"
             android:textColor="@color/design_default_color_primary"
@@ -57,18 +50,15 @@
         <Button
             android:id="@+id/btn_end_call"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/btn_width_small"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/btn_margin"
-            android:textColor="@color/design_default_color_primary"
+            android:textColor="@color/design_default_color_error"
             android:text="@string/str_status_end_call"/>
     </LinearLayout>
 
     <ListView
-        android:id="@+id/lst_home"
+        android:id="@+id/lst_calls"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible"/>
-
-
+        android:layout_height="match_parent" />
 </LinearLayout>
